--- a/counter_project/src/index.css
+++ b/counter_project/src/index.css
@@ -66,3 +66,19 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+.btn{
+  border: 2px solid black;
+  border-radius: 20px;
+
+  background-color: thistle;
+  color: slateblue;
+}
+
+.btn:hover{
+  background-color: antiquewhite;
+  color: tomato;
+  
+}
+
+
